# home_work_4

./: .gitignore  CMakeLists.txt  README.md
clock/: CMakeLists.txt  arrow.cpp  arrow.hpp  clock_render.cpp  gfx.hpp
include/: canvas.hpp  clock_render.hpp  line_render.hpp  triangle_indexed_render.hpp  triangle_interpolated_render.hpp  triangle_render.hpp
resource/: Star.ppm
src/: canvas.cpp  canvas_main.cpp  clock_render.cpp  image_leo.cpp  line_render.cpp  line_render_main.cpp  render_basic.cpp  triangle_indexed_render.cpp  triangle_indexed_render_main.cpp  triangle_interpolated_render.cpp  triangle_interpolated_render_main.cpp  triangle_render.cpp  triangle_render_main.cpp
